Change the core server from embedded Jetty to Payara Micro.